fixed authentication/login
